--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{CommonSerif}[BoldFont=]
+\setmainfont{LibertinusSerif}[BoldFont=] %Modified LibertinusSerif.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -82,47 +82,47 @@
 \section*{\fontsize{11}{14}\selectfont PREFACIO}
 \addcontentsline{toc}{section}{Prefacio}
 
-Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
-
-\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\vspace{5pt}
-
-Las \textit{Coplas por la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.
-
-El título, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican que está \comillas{tercerizado} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas} por lo anteriormente indicado, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.
-
-No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron divididos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} de sus textos, construyendo así un auténtico \textit{corpus}, como puede observarse en el \textit{Códice Chacón} [RES/45] en la Biblioteca Nacional de España.
+Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:\par
+%
+\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par\vspace{5pt}
+%
+Las \textit{Coplas por la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
+%
+El título, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican que está \comillas{tercerizado} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas} por lo anteriormente indicado, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.\par
+%
+No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron divididos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} de sus textos, construyendo así un auténtico \textit{corpus}, como puede observarse en el \textit{Códice Chacón} [RES/45] en la Biblioteca Nacional de España.\par
 
 \subsection*{\fontsize{11}{14}\selectfont TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{subsection}{Testimonios}
 
 \textit{LB3} = \textit{Cancionero de Egerton} [British Library, Eg. 939].
 %
-Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15\tsup{r.}-18\tsup{v.} contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19\tsup{v.}] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>
+Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15\tsup{r.}-18\tsup{v.} contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18\tsup{v.}, porque el fol. central [primitivo f. 19\tsup{v.}] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
 
 \textit{82*JM} = \textit{Vita Christi por fray Íñigo de Mendoza} [RBME, 100-II-17].
 %
-Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41\tsup{r.}-44\tsup{v.} contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>
+Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41\tsup{r.}-44\tsup{v.} contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>\par
 
 \textit{86*RL} = \textit{Cancionero de Ramón de Llavia} [BNE, INC/2567].
 %
-Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73\tsup{r.}-76\tsup{r.} contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>
+Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73\tsup{r.}-76\tsup{r.} contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>\par
 
 \textit{HH1} = \textit{Cancionero de Oñate-Castañeda} [Harvard Houghton Library, MS. Span. 97].
 %
-Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421\tsup{v.}-424\tsup{v.} contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.
+Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421\tsup{v.}-424\tsup{v.} contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\par
 
 \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia} [BNE, MS/4114].
 %
-Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407\tsup{r.}-418\tsup{v.} contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>
+Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407\tsup{r.}-418\tsup{v.} contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>\par
 
 \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza} [BNE, INC/897].
 %
-Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>
+Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>\par
 
 \subsection*{\fontsize{11}{14}\selectfont CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{subsection}{Criterios de edición}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteE{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} --esto es, \textit{EM6} y \textit{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \textit{stemma} completo \textit{cfr.} \textcite[103]{PérezPriego2017}.}:%
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteE{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} --esto es, \textit{EM6} y \textit{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \textit{stemma} completo \textit{cfr.} \textcite[103]{PérezPriego2017}.}:\par
 
 	\begin{figure}[ht]
 		\centering
@@ -155,8 +155,8 @@ Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcit
 		\end{tikzpicture}
 	\end{figure}%
 
-Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción del texto manriqueño.
-
+Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción del texto manriqueño.\par
+%
 Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al aparato de variantes, a excepción de \textit{nn} y las grafías dobles.}:
 %
 \begin{itemize}[label=--]%
@@ -172,16 +172,15 @@ Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al a
 \item \textit{nn} = se transcribe como \textit{ñ}.
 \item \textit{th} = se conserva para indicar latinismos cultos en el texto.
 \item \textit{⁊} = se interpreta por \textit{e}.%
-\end{itemize}
+\end{itemize}\par
 %
-
-Se sangran las líneas iniciales de cada sextina para indicar cada copla de la copla mayor.
-
-Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.
-
-El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}, quizá la \textit{editio princeps}.
-
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones o daños, entre otros-- y plausibles interpretaciones.
+Se sangran las líneas iniciales de cada sextina para indicar cada copla de la copla mayor.\par
+%
+Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.\par
+%
+El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}, quizá la \textit{editio princeps}.\par
+%
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones o daños, entre otros-- y plausibles interpretaciones.\par
 
 \section*{\fontsize{11}{14}\selectfont BIBLIOGRAFÍA CONSVLTADA}
 \addcontentsline{toc}{section}{Bibliografía consultada}
@@ -948,7 +947,8 @@ me perdona.»\par
 \pstart
 Así, co\textit{n} tal ente\textit{n}der\\
 todos sentidos humanos\\
-\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteE{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} --y el de Beltrán, en parte--, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} --como diccionario antiguo--, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral --en el vocablo--; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción en el \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] --aquel, a su vez, siguiendo a Avicena y su \textit{De anima}--, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad --siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición--, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
+\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteE{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} --y el de Beltrán, en parte--, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} --como diccionario antiguo--, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral --en el vocablo--; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción en el \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] --aquel, a su vez, siguiendo a Avicena y su \textit{De anima}--, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad --siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición--, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\par
+Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
 çercado de su muger\\
 \edtext{}{\linenum{|||||480}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\\
 y criados,\par
