--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{LibertinusSerif}[BoldFont=] %Modified LibertinusSerif.
+\setmainfont{LibertinusSerif}[BoldFont=,Numbers=OldStyle] %Modified LibertinusSerif.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
