--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{LibertinusSerif}[BoldFont=,Numbers=OldStyle] %Modified LibertinusSerif.
+\setmainfont{TeXGyreTermes}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified TeXGyreTermes with a one.oldstyle more high, because is too small, and a TironianEt adapted from GNU FreeSerif.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -162,7 +162,7 @@ Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al a
 \begin{itemize}[label=--]%
 \item \textit{b}-\textit{v} = se conserva la alternancia.
 \item \textit{f} = se mantiene en vocablos como \comillas{fizo} [hizo], \comillas{falló} [halló], \comillas{fijo} [hijo], porque, en general, corresponden a la \textit{f} inicial latina y, por tanto anulan las sinalefas.
-\item \textit{t} = se respeta la grafía en expresiones finalizadas en -\textit{at}, salvo cuando el testimonio exija una conversión por la rima.
+\item \textit{t} = se respeta la grafía en expresiones finalizadas en -\textit{at}, salvo cuando el testimonio exija una modificación por la rima.
 \item \textit{x} = equivale a la fricativa posalveolar sorda, por tanto, se conserva.
 \item \textit{ç} = se respetan en el texto las soluciones que ofrece el testimonio de base.
 \item \textit{i}-\textit{y}-\textit{j} = se regulariza. \textit{i} se coloca para vocales; \textit{y} para la conjunción copulativa y para vocablos cuya grafía final es \textit{y} vocálico [rey]; \textit{j} solo para consonantes.
@@ -537,7 +537,7 @@ de los fuegos ençe\textit{n}didos\\
 las músicas acordadas\\
 que tañían?\\
 ¿Qué se fizo aquel dançar,\\
-aquelas ropas \edtext{trepadas}{\Afootnote{japadas \textit{82*JM}; chapadas \textit{86*RL}, \textit{ε}, \textit{83*IM}}}\\
+aquellas ropas \edtext{trepadas}{\Afootnote{japadas \textit{82*JM}; chapadas \textit{86*RL}, \textit{ε}, \textit{83*IM}}}\\
 que \edtext{traían}{\lemma{trayan}\Afootnote{vestian \textit{ε}}}?\par
 \pend
 
